--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ button{
   font-family: 'Nunito', sans-serif;
 }
 
-.names{
+.name{
   display: block;
   font-family: 'Amatic SC', cursive;
   font-size: 500px;
